register,edit html

--- a/Assignment4/src/main/resources/static/css/myStyle.css
+++ b/Assignment4/src/main/resources/static/css/myStyle.css
@@ -56,6 +56,11 @@
     color: red;
     padding-top:10px;
   }
+  
+#successMsg {
+    color: #4266ce;
+    padding-top:10px;
+  }
 /* JSON PAGE  */  
 
 #statusBook .choose1{
