--- a/Assignment4/src/main/resources/templates/login.html
+++ b/Assignment4/src/main/resources/templates/login.html
@@ -3,18 +3,62 @@
 <head>
 <meta charset="UTF-8" />
 <title>Login Page</title>
-<link href="../static/css/style.css" th:href="@{/css/style.css}" rel="stylesheet" />
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" href="/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="/css/myStyle.css"/>
+    <style>
+    	@import url(https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700|Open+Sans:400,300,600);
+		*{box-sizing:border-box;}
+		body {
+		  font-family: 'open sans', helvetica, arial, sans;
+		background:url(https://i1.wp.com/www.splitshire.com/wp-content/uploads/2014/09/SplitShire_Blur_Background_XVI-1800x1200.jpg?fit=5385%2C3591&ssl=1) 
+		no-repeat center center fixed; 
+		  -webkit-background-size: cover;
+		  -moz-background-size: cover;
+		  -o-background-size: cover;
+		  background-size: cover;
+		}
+		
+		.login-form {
+			width: 450px;
+	    	margin: 50px auto;
+		}
+	    .login-form h2 {
+	        margin: 0 0 15px;
+	    }
+	</style>
+    
 </head>
 <body>
-    <div class="main-content">
-        <p th:if="${param.error}" class="error">Invalid email or password</p>
-        <p th:if="${param.logout}" class="success">You have been logged out</p>
-        <h3>Login to continue</h3>
-        <form th:action="@{/login}" method="POST">
-            <input type="text" name="email" placeholder="Your email" /><br />
-            <input type="password" name="password" placeholder="Your password" /><br />
-            <button type="submit">Login</button> <br />
-        </form>
+    <div class="main-content login-form">
+    	<div class="panel panel-default">
+	 		<div class="panel-body ">
+			 	<p th:if="${param.error}" class="forgot">Invalid email or password</p>
+		        <p th:if="${param.logout}" class="success">You have been logged out</p>
+		        <h2 class="text-center">Đăng nhập</h2>
+		        <form th:action="@{/login}" method="POST">
+		        	<div class="form-group">
+		        		<label>Email</label>
+		        		<input type="text" name="email" class="form-control" 
+		        			   placeholder="Nhập Email" />
+		        	</div>
+		        	<div class="form-group">
+		        		<label>Mật khẩu</label>
+		        		<input type="password" name="password" class="form-control" 
+		        		       placeholder="Nhập mật khẩu" />
+		        	</div>
+		        	<div class="form-group">
+		        		<button type="submit" class="btn btn-primary form-control">
+		        				Đăng nhập</button>
+		        	</div>
+		        	<div class="form-group">
+		        		<a class="btn btn-success form-control" href="/register">Đăng kí</a>
+		        	</div>
+		        </form>
+	 		</div>
+	 	</div>
+        
     </div>
 </body>
 </html>
