--- a/Assignment4/src/main/resources/templates/home.html
+++ b/Assignment4/src/main/resources/templates/home.html
@@ -35,7 +35,7 @@
 			</form>
      		<ul class="nav navbar-nav navbar-right">
 		      <li><label>Hi! <span sec:authentication="name"></span> </label></li>
-		      <li><a href="#" sec:authorize="isAnonymous()"><span class="glyphicon glyphicon-log-in"></span>Đăng kí</a></li>
+		      <li><a href="/register" sec:authorize="isAnonymous()"><span class="glyphicon glyphicon-log-in"></span>Đăng kí</a></li>
 		      <li><a href="/login" sec:authorize="isAnonymous()"><span class="glyphicon glyphicon-log-in"></span>Đăng nhập</a></li>
 		      <li><a href="javascript:void(0)" onclick="loadUserProfile()" sec:authorize="hasAnyRole('USER','ADMIN','SUPER_ADMIN')">Đổi mật khẩu</a></li>
 		      <li><a th:href="@{/logout}" sec:authorize="hasAnyRole('USER','ADMIN','SUPER_ADMIN')">Đăng xuất</a></li>
